[gd_scene load_steps=19 format=3 uid="uid://uf3j0muxm4jw"]

[ext_resource type="Script" uid="uid://jr8ypmglkdhx" path="res://ui/cursor/isometric_cursor/isometric_cursor_visual/isometric_cursor_visual.gd" id="1_u3n5w"]
[ext_resource type="PackedScene" uid="uid://d1hdqqs20ewit" path="res://ui/cursor/isometric_cursor/isometric_cursor_visual/modulation_highlight/large_modulation_highlight.tscn" id="2_g1r7s"]
[ext_resource type="Shader" uid="uid://dbjvht35kvwgs" path="res://components/outline_component/outline.gdshader" id="3_vm8ax"]
[ext_resource type="Texture2D" uid="uid://bm0baq3q3jrlx" path="res://ui/cursor/isometric_cursor/isometric_cursor_visual/wooden_arrow/wooden_arrow_sheet.png" id="4_5x7va"]
[ext_resource type="Script" uid="uid://dym6xbwe0vfcn" path="res://ui/cursor/isometric_cursor/isometric_cursor_visual/wooden_arrow/wooden_arrow.gd" id="5_8u83s"]
[ext_resource type="PackedScene" uid="uid://b6tp5vtd60pup" path="res://ui/cursor/isometric_cursor/isometric_cursor_visual/visual_cursor_states/visual_cursor_destroy_state/visual_cursor_destroy_state.tscn" id="5_wbapv"]
[ext_resource type="PackedScene" uid="uid://djcd7kfaqs7h2" path="res://ui/cursor/isometric_cursor/isometric_cursor_visual/visual_cursor_states/visual_cursor_extinguish_state/visual_cursor_extinguish_state.tscn" id="6_vm8ax"]
[ext_resource type="PackedScene" uid="uid://baknhxcd2oevh" path="res://ui/cursor/isometric_cursor/isometric_cursor_visual/visual_cursor_states/visual_cursor_plant_state/visual_cursor_plant_state.tscn" id="7_jssra"]
[ext_resource type="PackedScene" uid="uid://c5xlk6t5x52el" path="res://ui/cursor/isometric_cursor/isometric_cursor_visual/visual_cursor_states/visual_cursor_select_state/visual_cursor_select_state.tscn" id="8_66kca"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jssra"]
shader = ExtResource("3_vm8ax")
shader_parameter/outline_width = 1
shader_parameter/outline_alpha = 1.0
shader_parameter/outline_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6v85"]
atlas = ExtResource("4_5x7va")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjmk3"]
atlas = ExtResource("4_5x7va")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3d4o"]
atlas = ExtResource("4_5x7va")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_61smt"]
atlas = ExtResource("4_5x7va")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrq54"]
atlas = ExtResource("4_5x7va")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_trmi3"]
atlas = ExtResource("4_5x7va")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_umjfs"]
atlas = ExtResource("4_5x7va")
region = Rect2(192, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_f33o1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6v85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjmk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3d4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61smt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrq54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trmi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umjfs")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="VisualCursor" type="Marker2D" node_paths=PackedStringArray("cursor_state_dict")]
script = ExtResource("1_u3n5w")
cursor_state_dict = {
0: NodePath("States/VisualCursorSelectState"),
1: NodePath("States/VisualCursorPlantState"),
2: NodePath("States/VisualCursorDestroyState"),
3: NodePath("States/VisualCursorExtinguishState")
}

[node name="LargeModulationHighlight" parent="." instance=ExtResource("2_g1r7s")]
unique_name_in_owner = true

[node name="ExtraHighlights" type="Node2D" parent="."]

[node name="Hologram" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.341176, 0.52549, 0.505882)
z_index = 2
material = SubResource("ShaderMaterial_jssra")

[node name="WoodenArrow" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
z_index = 25
sprite_frames = SubResource("SpriteFrames_f33o1")
frame_progress = 0.531519
script = ExtResource("5_8u83s")

[node name="States" type="Node" parent="."]

[node name="VisualCursorSelectState" parent="States" instance=ExtResource("8_66kca")]

[node name="VisualCursorPlantState" parent="States" instance=ExtResource("7_jssra")]

[node name="VisualCursorDestroyState" parent="States" instance=ExtResource("5_wbapv")]

[node name="VisualCursorExtinguishState" parent="States" instance=ExtResource("6_vm8ax")]
